# hyprland-auto-layot

./: Cargo.toml  LICENSE  README.md
src/: config.rs  fire_once.rs  helpers.rs  hyprland_conf.rs  main.rs  workspace_handler.rs
