[package]
authors = ["Vlad Petrov <rust@ejiek.id>"]
description = "A tool to automatically set vertical or horizontal master layout in Hyprland based on a monitor orientation"
documentation = "https://doc.rs/hyprland-auto-layout"
edition = "2021"
homepage = "https://github.com/ejiek/hyprland-auto-layout"
keywords = ["hyprland", "autolayout", "multi-monitor", "vertical", "wayland"]
license = "MIT"
name = "hyprland-auto-layout"
readme = "README.md"
repository = "https://github.com/ejiek/hyprland-auto-layout"
version = "0.1.0"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
dirs = "5.0.1"
eyre = "0.6.8"
hyprland = { git = "https://github.com/ejiek/hyprland-rs", branch = "layoutmsg" }
log = "0.4.20"
serde = "1.0.190"
simple_logger = "4.2.0"
